--- a/app/src/main/res/layout/activity_mainlist.xml
+++ b/app/src/main/res/layout/activity_mainlist.xml
@@ -8,7 +8,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#F40311"
+        android:background="#F44336"
         android:orientation="horizontal"
         android:padding="8dp"
         tools:showIn="@layout/activity_main">
@@ -18,7 +18,7 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:textSize="40dp"
-            android:text="Videojuegos"/>
+            android:text="Lista de Videojuegos"/>
     </LinearLayout>
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
