--- a/app/src/main/res/layout/register_activity.xml
+++ b/app/src/main/res/layout/register_activity.xml
@@ -4,9 +4,22 @@
     android:layout_height="match_parent"
     tools:context=".activity.MainActivity"
     android:orientation="vertical">
-    <include layout="@layout/main_title"
-        android:id="@+id/options_toolbar"
-        />
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#F44336"
+        android:orientation="horizontal"
+        android:padding="8dp"
+        tools:showIn="@layout/activity_main">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:textSize="40dp"
+            android:text="Registro de usuario"/>
+    </LinearLayout>
 
     <EditText
         android:id="@+id/editTextUser"
@@ -37,21 +50,7 @@
         android:textSize="20sp"
         />
     <Button
-        android:id="@+id/buttonLogin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
-        android:text="Login"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        android:background="#F44336"
-        />
-    <Button
-        android:id="@+id/buttonRegister"
+        android:id="@+id/buttonDoRegister"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
