--- a/app/src/main/res/layout/activity_mainlist.xml
+++ b/app/src/main/res/layout/activity_mainlist.xml
@@ -24,20 +24,20 @@
             android:textSize="40dp"
             app:layout_constraintEnd_toEndOf="@id/clTitle"
             app:layout_constraintStart_toStartOf="@id/clTitle"
- />
+        />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/clSubTitle"
         android:layout_width="match_parent"
-        android:layout_height="20dp"
+        android:layout_height="wrap_content"
         android:background="#F44336"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
-        app:layout_constraintTop_toBottomOf="@id/clTitle">
+        app:layout_constraintTop_toBottomOf="@id/clTitle"
+        >
 
         <Spinner
             android:id="@+id/status_list"
@@ -55,46 +55,48 @@
             android:drawSelectorOnTop="true"
             android:entries="@array/pla_list"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/status_list" />
+            />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="590dp"
-        android:scrollbars="vertical"
-        app:layout_constraintBottom_toBottomOf="@+id/clEnd"
-        app:layout_constraintTop_toBottomOf="@+id/clSubTitle" />
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/clEnd"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/recyclerView"
-        tools:showIn="@layout/activity_main">
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/UserConfig"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
-            android:backgroundTint="#F44336"
-            android:src="@drawable/ic_sharp_account_circle_24"
-            app:layout_constraintBottom_toBottomOf="@id/clEnd"
-
-            app:layout_constraintEnd_toEndOf="@id/clEnd"
-            app:layout_constraintTop_toTopOf="@id/clEnd" />
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/AddGame"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
-            android:backgroundTint="#F44336"
-            android:src="@drawable/ic_baseline_plus_one_24"
-            app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/clSubTitle"
+        >
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="500dp"
+            android:scrollbars="vertical"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="@+id/clEnd"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
     </androidx.constraintlayout.widget.ConstraintLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/UserConfig"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:backgroundTint="#F44336"
+        android:src="@drawable/ic_sharp_account_circle_24"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/AddGame"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:backgroundTint="#F44336"
+        android:src="@drawable/ic_baseline_plus_one_24"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
