--- a/app/src/main/res/layout/addgame_activity.xml
+++ b/app/src/main/res/layout/addgame_activity.xml
@@ -60,6 +60,50 @@
         android:textSize="20sp"
         android:autofillHints="" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:orientation="horizontal"
+        android:padding="8dp">
+            <ImageView
+                android:id="@+id/imageViewGame"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:src="@drawable/add_screen_image_placeholder"
+                />
+            <EditText
+                android:id="@+id/editTextGameImage"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginBottom="8dp"
+                android:hint="Url de la imagen"
+                android:inputType="text"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:autofillHints="" />
+            <Button
+                android:id="@+id/buttonLoadImage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginBottom="8dp"
+                android:text="Cargar"
+                android:textColor="@color/white"
+                android:background="#F44336"
+                />
+
+        </LinearLayout>
     <Button
         android:id="@+id/buttonDoRegister"
         android:layout_width="match_parent"
