Agregar margen a botones de ajuste y +1

--- a/app/src/main/res/layout/activity_mainlist.xml
+++ b/app/src/main/res/layout/activity_mainlist.xml
@@ -82,6 +82,8 @@
         android:id="@+id/UserConfig"
         android:layout_width="64dp"
         android:layout_height="64dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginRight="16dp"
         android:backgroundTint="#F44336"
         android:src="@drawable/ic_sharp_account_circle_24"
         app:layout_constraintEnd_toEndOf="parent"
@@ -91,6 +93,8 @@
         android:id="@+id/AddGame"
         android:layout_width="64dp"
         android:layout_height="64dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginLeft="16dp"
         android:backgroundTint="#F44336"
         android:src="@drawable/ic_baseline_plus_one_24"
         app:layout_constraintStart_toStartOf="parent"
