--- a/app/src/main/res/layout/edituser_activity.xml
+++ b/app/src/main/res/layout/edituser_activity.xml
@@ -31,7 +31,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:hint="Contraseña"
-        android:inputType="text"
+        android:inputType="textPassword"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:autofillHints="" />
@@ -46,7 +46,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:hint="Repita Contraseña"
-        android:inputType="text"
+        android:inputType="textPassword"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:autofillHints="" />
