--- a/app/src/main/res/layout/item_main_screen_adapter.xml
+++ b/app/src/main/res/layout/item_main_screen_adapter.xml
@@ -63,6 +63,41 @@
                     android:textColor="@color/item_pill_description_text_color"
                     android:textSize="@dimen/item_description_textSize"
                     />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <ImageView
+                        android:id="@+id/iv_star1"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:src="@drawable/ic_baseline_star_rate_24"
+                        />
+                    <ImageView
+                        android:id="@+id/iv_star2"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:src="@drawable/ic_baseline_star_rate_24"
+                        />
+                    <ImageView
+                        android:id="@+id/iv_star3"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:src="@drawable/ic_baseline_star_rate_24"
+                        />
+                    <ImageView
+                        android:id="@+id/iv_star4"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:src="@drawable/ic_baseline_star_rate_24"
+                        />
+                    <ImageView
+                        android:id="@+id/iv_star5"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:src="@drawable/ic_baseline_star_rate_24"
+                        />
+                </LinearLayout>
             </LinearLayout>
 
 
