Agregado mostrar contraseña y guardar sesión

--- a/app/src/main/res/layout/edituser_activity.xml
+++ b/app/src/main/res/layout/edituser_activity.xml
@@ -22,7 +22,7 @@
     </LinearLayout>
 
     <EditText
-        android:id="@+id/editPassword"
+        android:id="@+id/editPasswordUpdate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -37,7 +37,7 @@
         android:autofillHints="" />
 
     <EditText
-        android:id="@+id/editPasswordRepeat"
+        android:id="@+id/editPasswordUpdateRepeat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -50,6 +50,18 @@
         android:textColor="@color/black"
         android:textSize="20sp"
         android:autofillHints="" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/cbShowPasswordUpdate"
+        android:text="Mostrar Contraseña"
+        android:textColor="@color/black"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp" />
 
     <Button
         android:id="@+id/buttonUpdatePassword"
