--- a/app/src/main/res/layout/register_activity.xml
+++ b/app/src/main/res/layout/register_activity.xml
@@ -22,7 +22,7 @@
     </LinearLayout>
 
     <EditText
-        android:id="@+id/editTextUser"
+        android:id="@+id/editTextUserRegister"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -36,7 +36,7 @@
         android:textSize="20sp"
         android:autofillHints="" />
     <EditText
-        android:id="@+id/editTextPassword"
+        android:id="@+id/editTextPasswordRegister"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -49,6 +49,17 @@
         android:textColor="@color/black"
         android:textSize="20sp"
         />
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/cbShowPasswordRegister"
+        android:text="Mostrar Contraseña"
+        android:textColor="@color/black"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp" />
     <Button
         android:id="@+id/buttonDoRegister"
         android:layout_width="match_parent"
