--- a/app/src/main/res/layout/userlist_activity.xml
+++ b/app/src/main/res/layout/userlist_activity.xml
@@ -17,11 +17,10 @@
         >
 
         <TextView
-            android:id="@+id/tvTitle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:text="Lista de Videojuegos"
+            android:text="Lista de Usuarios"
             android:textSize="40dp"
             app:layout_constraintEnd_toEndOf="@id/clTitle"
             app:layout_constraintStart_toStartOf="@id/clTitle"
@@ -47,57 +46,14 @@
             android:autofillHints="creditCardExpirationDate"
             android:drawSelectorOnTop="true"
             app:layout_constraintStart_toStartOf="parent" />
-
-        <Spinner
-            android:id="@+id/order_list"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:drawSelectorOnTop="true"
-            app:layout_constraintEnd_toEndOf="parent"
-            />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/clEnd"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:layout_height="800dp"
+        android:scrollbars="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/clSubTitle"
-        >
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="500dp"
-            android:scrollbars="vertical"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/clEnd"
-            app:layout_constraintBottom_toBottomOf="parent"
-            />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/UserConfig"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginRight="16dp"
-        android:backgroundTint="#F44336"
-        android:src="@drawable/ic_sharp_account_circle_24"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/AddGame"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginLeft="16dp"
-        android:backgroundTint="#F44336"
-        android:src="@drawable/ic_baseline_plus_one_24"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
