--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -9,4 +9,56 @@
         <item>Público</item>
         <item>Privado</item>
     </string-array>
+    <string-array name="add_game_array_valoration">
+        <item>Valoración</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+    </string-array>
+    <string-array name="add_game_array_platform">
+        <item>Plataforma</item>
+        <item>PC</item>
+        <item>PS4</item>
+        <item>XBOX</item>
+        <item>SWITCH</item>
+        <item>3DS</item>
+        <item>WII</item>
+        <item>WII U</item>
+        <item>XBOX ONE</item>
+        <item>PS3</item>
+        <item>PS2</item>
+        <item>PS1</item>
+        <item>PS VITA</item>
+        <item>N64</item>
+        <item>NDS</item>
+        <item>NES</item>
+        <item>GB</item>
+        <item>GBA</item>
+        <item>GBC</item>
+        <item>GBCS</item>
+        <item>SNES</item>
+        <item>SNES</item>
+    </string-array>
+    <string-array name="add_game_array_status">
+        <item>Status</item>
+        <item>Pendiente</item>
+        <item>En proceso</item>
+        <item>Finalizado</item>
+    </string-array>
+    <string-array name="main_list_array_status">
+        <item>Status</item>
+        <item>Pendiente</item>
+        <item>En proceso</item>
+        <item>Finalizado</item>
+    </string-array>
+    <string-array name="main_list_array_order">
+        <item>Ordenar</item>
+        <item>Por Nombre</item>
+        <item>Por Plataforma</item>
+        <item>Por Compañia</item>
+        <item>Por Género</item>
+        <item>Por Valoración</item>
+    </string-array>
 </resources>
