Mvp al completo, corrutinas, progressbar, etc

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,11 +2,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.MainActivity"
+    tools:context=".view.MainActivity"
     android:orientation="vertical">
     <include layout="@layout/main_title"
         android:id="@+id/options_toolbar"
         />
+
+    <LinearLayout
+        android:id="@+id/lyt_main_content"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/editTextUser"
@@ -109,5 +115,18 @@
         android:textColor="@color/white"
         android:textSize="20sp"
         android:background="#F44336"
+        />
+    </LinearLayout>
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="400dp"
+        android:layout_height="400dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        android:indeterminate="true"
+        android:visibility="gone"
         />
 </LinearLayout>
