--- a/app/src/main/res/layout/edituser_activity.xml
+++ b/app/src/main/res/layout/edituser_activity.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.EditUserActivity"
+    tools:context=".view.EditUserActivity"
     android:orientation="vertical">
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
@@ -21,6 +21,11 @@
             android:text="Editar Usuario"/>
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/lytMainContent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
     <EditText
         android:id="@+id/editPasswordUpdate"
         android:layout_width="match_parent"
@@ -122,5 +127,18 @@
         android:textColor="@color/white"
         android:textSize="20sp"
         android:background="#F44336"
+        />
+    </LinearLayout>
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="400dp"
+        android:layout_height="400dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        android:indeterminate="true"
+        android:visibility="gone"
         />
 </LinearLayout>
