--- a/app/src/main/res/layout/item_main_screen_adapter.xml
+++ b/app/src/main/res/layout/item_main_screen_adapter.xml
@@ -62,6 +62,21 @@
                     android:textColor="@color/item_pill_description_text_color"
                     android:textSize="@dimen/item_description_textSize"
                     />
+                <TextView
+                    android:id="@+id/tvGenre"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/item_pill_description_text_color"
+                    android:textSize="@dimen/item_description_textSize"
+                    />
+                <TextView
+                    android:id="@+id/tvCompany"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/item_pill_description_text_color"
+                    android:layout_marginBottom="4dp"
+                    android:textSize="@dimen/item_description_textSize"
+                    />
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
