--- a/app/src/main/res/layout/item_userlist_screen_adapter.xml
+++ b/app/src/main/res/layout/item_userlist_screen_adapter.xml
@@ -10,29 +10,59 @@
         android:layout_marginStart="@dimen/item_cv_main_marginStartEnd"
         android:layout_marginEnd="@dimen/item_cv_main_marginStartEnd"
         android:background="@color/white"
-        app:cardCornerRadius="@dimen/item_cv_corner_radius"
-        app:cardUseCompatPadding="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         >
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/clUserItem"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical"
-            android:padding="@dimen/item_content_padding">
+            android:layout_height="80dp"
+            android:orientation="vertical"
+            android:gravity="center_vertical">
                 <Button
                     android:id="@+id/tvName"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
                     android:textColor="@color/primary_text_color"
-                    android:textSize="@dimen/item_title_textSize"
+                    android:text="Nombre"
+                    android:textSize="20dp"
                     android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="@+id/clUserItem"
+                    app:layout_constraintStart_toStartOf="@+id/clUserItem"
+                    app:layout_constraintTop_toTopOf="@+id/clUserItem"
+                    app:layout_constraintBottom_toBottomOf="@+id/clUserItem"
                     />
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/tvFollower"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/is_your_follower"
+                    android:textSize="15dp"
+                    android:textStyle="bold"
+                    android:elevation="20dp"
+                    android:forceHasOverlappingRendering="true"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toBottomOf="@+id/clUserItem"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginStart="5dp"
+                    />
+                <TextView
+                    android:id="@+id/tvFollowed"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/you_are_follow"
+                    android:textSize="15dp"
+                    android:textStyle="bold"
+                    android:elevation="20dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="@+id/clUserItem"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginEnd="5dp"
+                    />
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
