--- a/app/src/main/res/layout/userlist_activity.xml
+++ b/app/src/main/res/layout/userlist_activity.xml
@@ -50,11 +50,12 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="800dp"
+        android:layout_height="0dp"
         android:scrollbars="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/clSubTitle"
+        app:layout_constraintBottom_toBottomOf="parent"
         />
     <ProgressBar
         android:id="@+id/progressBar"
