--- a/app/src/main/res/layout/userlist_activity.xml
+++ b/app/src/main/res/layout/userlist_activity.xml
@@ -9,7 +9,7 @@
         android:id="@+id/clTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#F44336"
+        android:background="#000000"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,6 +20,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
+            android:textColor="@color/white"
+            android:textStyle="bold|italic"
             android:text="@string/user_list"
             android:textSize="40sp"
             app:layout_constraintEnd_toEndOf="@id/clTitle"
@@ -32,7 +34,7 @@
         android:id="@+id/clSubTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#F44336"
+        android:background="#ababab"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
