--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -97,6 +97,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
+        android:textStyle="bold|italic"
         android:text="Login"
         android:textColor="@color/white"
         android:textSize="20sp"
@@ -111,6 +112,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
+        android:textStyle="bold|italic"
         android:text="Registrar"
         android:textColor="@color/white"
         android:textSize="20sp"
