--- a/app/src/main/res/layout/addgame_activity.xml
+++ b/app/src/main/res/layout/addgame_activity.xml
@@ -8,7 +8,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#F44336"
+        android:background="#000000"
         android:orientation="horizontal"
         android:padding="8dp"
         tools:showIn="@layout/activity_main">
@@ -17,6 +17,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
+            android:textStyle="bold|italic"
+            android:textColor="@color/white"
             android:textSize="40dp"
             android:text="Registro de juego"/>
     </LinearLayout>
@@ -35,7 +37,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:hint="Nombre del juego"
+        android:hint="Nombre"
         android:inputType="text"
         android:textColor="@color/black"
         android:textSize="20sp"
@@ -145,6 +147,7 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginBottom="8dp"
+                android:textStyle="bold|italic"
                 android:text="Cargar"
                 android:textColor="@color/white"
                 android:background="#F44336"
@@ -160,7 +163,8 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
-        android:text="Agregar juego"
+        android:textStyle="bold|italic"
+        android:text="Añadir"
         android:textColor="@color/white"
         android:textSize="20sp"
         android:background="#F44336"
