--- a/app/src/main/res/layout/item_userlist_screen_adapter.xml
+++ b/app/src/main/res/layout/item_userlist_screen_adapter.xml
@@ -26,7 +26,7 @@
                     android:id="@+id/tvName"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    android:textColor="@color/primary_text_color"
+                    android:textColor="@color/white"
                     android:text="Nombre"
                     android:textSize="20dp"
                     android:textStyle="bold"
@@ -39,8 +39,9 @@
                     android:id="@+id/tvFollower"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/white"
                     android:text="@string/is_your_follower"
-                    android:textSize="15dp"
+                    android:textSize="20dp"
                     android:textStyle="bold"
                     android:elevation="20dp"
                     android:forceHasOverlappingRendering="true"
@@ -53,8 +54,9 @@
                     android:id="@+id/tvFollowed"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/white"
                     android:text="@string/you_are_follow"
-                    android:textSize="15dp"
+                    android:textSize="20dp"
                     android:textStyle="bold"
                     android:elevation="20dp"
                     app:layout_constraintEnd_toEndOf="parent"
