--- a/app/src/main/res/layout/register_activity.xml
+++ b/app/src/main/res/layout/register_activity.xml
@@ -8,7 +8,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#F44336"
+        android:background="#000000"
         android:orientation="horizontal"
         android:padding="8dp"
         tools:showIn="@layout/activity_main">
@@ -17,8 +17,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
+            android:textColor="@color/white"
+            android:textStyle="bold|italic"
             android:textSize="40dp"
-            android:text="Registro de usuario"/>
+            android:text="Registro"/>
     </LinearLayout>
 
     <LinearLayout
@@ -74,6 +76,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
+        android:textStyle="bold|italic"
         android:text="Registrar"
         android:textColor="@color/white"
         android:textSize="20sp"
