--- a/app/src/main/res/layout/addgame_activity.xml
+++ b/app/src/main/res/layout/addgame_activity.xml
@@ -30,7 +30,7 @@
         android:orientation="vertical">
     <EditText
         android:id="@+id/editTextGameName"
-        android:layout_width="match_parent"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginStart="8dp"
@@ -45,7 +45,7 @@
 
     <Spinner
         android:id="@+id/spinnerPlatform"
-        android:layout_width="match_parent"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginStart="8dp"
@@ -57,7 +57,7 @@
 
     <Spinner
         android:id="@+id/spinnerStatus"
-        android:layout_width="match_parent"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginStart="8dp"
@@ -69,7 +69,7 @@
 
         <EditText
             android:id="@+id/editTextGameCompany"
-            android:layout_width="match_parent"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginStart="8dp"
@@ -84,7 +84,7 @@
 
         <EditText
             android:id="@+id/editTextGameGenre"
-            android:layout_width="match_parent"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginStart="8dp"
@@ -99,7 +99,7 @@
 
         <Spinner
             android:id="@+id/spinnerPoints"
-            android:layout_width="match_parent"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginStart="8dp"
@@ -158,9 +158,8 @@
         android:id="@+id/buttonDoRegister"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
         android:textStyle="bold|italic"
