--- a/app/src/main/res/layout/activity_mainlist.xml
+++ b/app/src/main/res/layout/activity_mainlist.xml
@@ -60,16 +60,20 @@
 
         <ImageView
             android:id="@+id/ivOrderDesc"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
             android:src="@drawable/ic_arrow_down"
             app:layout_constraintBottom_toBottomOf="@id/clSubTitle"
             app:layout_constraintStart_toEndOf="@+id/order_list" />
 
         <ImageView
             android:id="@+id/ivOrderAsc"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
             android:src="@drawable/ic_arrow_up"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@id/clSubTitle"
