--- a/app/src/main/res/layout/edituser_activity.xml
+++ b/app/src/main/res/layout/edituser_activity.xml
@@ -30,7 +30,7 @@
         android:orientation="vertical">
     <EditText
         android:id="@+id/editPasswordUpdate"
-        android:layout_width="match_parent"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginStart="8dp"
@@ -45,7 +45,7 @@
 
     <EditText
         android:id="@+id/editPasswordUpdateRepeat"
-        android:layout_width="match_parent"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginStart="8dp"
@@ -126,9 +126,8 @@
             android:id="@+id/buttonUpdateStatus"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
             android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp"
             android:textStyle="bold|italic"
@@ -141,9 +140,8 @@
             android:id="@+id/buttonUpdatePassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
             android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp"
             android:textStyle="bold|italic"
